--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "yangliandong1987@163.com / yangld@ihb.ac.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
