--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "Institute of Hydrobiology, Chinese Academy of Sciences"
   uri              : # URL
   email            : "yangliandong1987@163.com / yangld@ihb.ac.cn" 
 
