--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Liandong Yang"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Fish evolutionary genomics"
   location         : "Earth"
   employer         : "Institute of Hydrobiology, Chinese Academy of Sciences"
   uri              : # URL
