--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Fish evolutionary genomics"
   location         : "Earth"
-  employer         : "Institute of Hydrobiology, Chinese Academy of Sciences"
+  employer         : "Institute of Hydrobiology, CAS"
   uri              : # URL
-  email            : "yangliandong1987@163.com / yangld@ihb.ac.cn" 
+  email            : "yangliandong1987@163.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
