--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Earth"
   employer         : "Institute of Hydrobiology, CAS"
   uri              : # URL
-  email            : "yangliandong1987@163.com" 
+  email            : "yangliandong1987" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
