--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   name             : "Liandong Yang"
   pronouns         : # example: "she/her"  
   bio              : "Fish evolutionary genomics"
-  location         : "Earth"
+  location         : "Wuhan, China"
   employer         : "Institute of Hydrobiology, CAS"
   uri              : # URL
-  email            : "yangliandong1987" 
+  email            : "yangld" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
