--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Fish evolutionary genomics"
   location         : "Wuhan, China"
-  employer         : "Institute of Hydrobiology, CAS"
+  employer         : "CAS"
   uri              : # URL
-  email            : "yangld" 
+  email            : "yangld@ihb.ac.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
