--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Wuhan, China"
   employer         : "CAS"
   uri              : # URL
-  email            : "yangld@ihb.ac.cn" 
+  email            : "yangliandong1987@163.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
