--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Fish evolutionary genomics"
   location         : "Wuhan, China"
-  employer         : "CAS"
+  employer         : "Institute of Hydrobiology,CAS"
   uri              : # URL
   email            : "yangliandong1987@163.com" 
 
