--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0001-7570-0296"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=liandong+yang&sort=date"
   researchgate     : "https://www.researchgate.net/profile/Liandong-Yang"
 
   # Repositories and software development
