--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "profile.png"
   name             : "Liandong Yang"
   pronouns         : # example: "she/her"  
-  bio              : "Fish evolutionary genomics"
+  bio              : "Fish evolutionary genomics / yangliandong1987@163.com"
   location         : "Wuhan, China"
   employer         : "Institute of Hydrobiology,CAS"
   uri              : # URL
-  email            : "yangliandong1987@163.com" 
+  email            : # URL
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
