--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "yang.png"
   name             : "Liandong Yang"
   pronouns         : # example: "she/her"  
-  bio              : "Fish evolutionary genomics / yangliandong1987@163.com"
+  bio              : "Fish evolutionary genomics yangliandong1987@163.com"
   location         : "Wuhan, China"
   employer         : "Institute of Hydrobiology, CAS"
   uri              : # URL
