--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com.hk/citations?user=vNiGqDwAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "https://orcid.org/0000-0001-7570-0296"
+  orcid            : # "https://orcid.org/0000-0001-7570-0296"
   semantic         : # URL
   pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=liandong+yang&sort=date"
   researchgate     : "https://www.researchgate.net/profile/Liandong-Yang"
